--- a/ProyectoTec/Base.lproj/Main.storyboard
+++ b/ProyectoTec/Base.lproj/Main.storyboard
@@ -34,65 +34,65 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="225"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KFc-Lz-gSL" id="WN0-uB-vel">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="224.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="224"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Macdonalds" translatesAutoresizingMaskIntoConstraints="NO" id="ErT-cR-UZf">
-                                                    <rect key="frame" x="-0.5" y="0.0" width="375.5" height="160"/>
+                                                    <rect key="frame" x="-1" y="0.0" width="375" height="160"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MacDonalds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRD-Mu-Dja">
-                                                    <rect key="frame" x="8" y="168" width="251.5" height="21"/>
+                                                    <rect key="frame" x="8" y="168" width="251" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                                     <color key="textColor" red="0.37647058823529411" green="0.37647058823529411" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurante de Hamburguesas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugT-CQ-Rc4">
-                                                    <rect key="frame" x="8" y="197" width="251.5" height="21"/>
+                                                    <rect key="frame" x="8" y="197" width="251" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                                     <color key="textColor" red="0.56470588235294117" green="0.56470588235294117" blue="0.56470588235294117" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="rHt-Ln-k6P">
-                                                    <rect key="frame" x="345.5" y="196" width="21.5" height="21.5"/>
+                                                    <rect key="frame" x="345" y="195" width="21" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="FgH-JW-AVB">
-                                                    <rect key="frame" x="326" y="196" width="20.5" height="21.5"/>
+                                                    <rect key="frame" x="326" y="195" width="20" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="PaS-Tl-ScN">
-                                                    <rect key="frame" x="305.5" y="196" width="21" height="21.5"/>
+                                                    <rect key="frame" x="305" y="195" width="21" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="7ke-Rl-fPs">
-                                                    <rect key="frame" x="285.5" y="196" width="21.5" height="21.5"/>
+                                                    <rect key="frame" x="284" y="195" width="23" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="ohb-P8-N1S">
-                                                    <rect key="frame" x="266" y="196" width="20.5" height="21.5"/>
+                                                    <rect key="frame" x="265" y="195" width="21" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="LJD-kf-Gr6">
-                                                    <rect key="frame" x="348" y="172.5" width="15.5" height="15.5"/>
+                                                    <rect key="frame" x="347" y="171" width="16" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="AP1-DP-PDP">
-                                                    <rect key="frame" x="327.5" y="172.5" width="16.5" height="15.5"/>
+                                                    <rect key="frame" x="327" y="171" width="17" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="GjV-JS-coV">
-                                                    <rect key="frame" x="308" y="172.5" width="15.5" height="15.5"/>
+                                                    <rect key="frame" x="308" y="171" width="15" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="ViS-R7-JeH">
-                                                    <rect key="frame" x="288" y="172.5" width="15.5" height="15.5"/>
+                                                    <rect key="frame" x="288" y="171" width="15" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="money" translatesAutoresizingMaskIntoConstraints="NO" id="VrP-5D-sm7">
-                                                    <rect key="frame" x="267.5" y="172.5" width="16.5" height="15.5"/>
+                                                    <rect key="frame" x="266" y="171" width="17" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -130,7 +130,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" title="Restaurantes" id="BQH-ae-QHq"/>
+                    <navigationItem key="navigationItem" title="Restaurantes" id="BQH-ae-QHq">
+                        <barButtonItem key="rightBarButtonItem" title="Cargar" id="DUS-m6-91Q">
+                            <connections>
+                                <action selector="obtenerInformacionWithSender:" destination="BYZ-38-t0r" id="oBZ-KO-hFp"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="map" destination="dme-jR-L7O" id="fao-LN-1y3"/>
                         <outlet property="tableInfo" destination="qNg-Ra-btS" id="box-TM-SKE"/>
@@ -138,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.8" y="123.68815592203899"/>
+            <point key="canvasLocation" x="1175" y="118"/>
         </scene>
         <!--Alimentos View Controller-->
         <scene sceneID="CPq-Bz-I0p">
